# RedNote-AutoPilot

./: .env.example  .gitignore  CODEX_DEVELOPMENT_GUIDE.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/ai_engine/: content_generator.py
app/analytics/: service.py
app/api_client/: xhs_client.py
app/channels/: __init__.py  android_device_client.py  base.py  browser_rpa.py  device_auto.py  factory.py
app/config/: settings.py
app/inventory_manager/: service.py
app/models/: schemas.py
app/order_manager/: service.py
app/product_manager/: service.py
app/scheduler/: jobs.py
app/tasks/: __init__.py  executor.py  repository.py
app/workflows/: auto_ops.py
docs/: android_emulator_guide.md  architecture.md  mobile_listing_gap_checklist.md
scripts/: android_controller.py  bing_search.py  login_once.py  run_shelf_task.py  xhs_uploader.py
src/rednote_autopilot/: __init__.py
tests/: test_ai_generator.py  test_analytics.py  test_channel_factory.py  test_scheduler.py  test_task_flow.py
