[project]
name = "rednote-autopilot"
version = "0.1.0"
description = "AI-driven e-commerce automation middleware for RedNote/XHS"
readme = "README.md"
authors = [{ name = "Codex", email = "codex@openai.com" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "requests>=2.32.0",
  "apscheduler>=3.11.0",
  "redis>=6.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "openai>=1.97.0",
  "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.12.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
